# ScintillatingFibers

./: .clang-format  .gitignore  Attenuation_8hh_source.html  BGFit_8hh_source.html  CMakeLists.txt  LinkDef_8h_source.html  README.md  SFAttenuation_8hh_source.html  SFData_8hh_source.html  SFDrawCommands_8hh_source.html  SFEnergyRes_8hh_source.html  SFEnergyResolution_8hh_source.html  SFFitResults_8hh_source.html  SFFit_8hh_source.html  SFLightOutput_8hh_source.html  SFMC_8hh_source.html  SFPeakFinder_8hh_source.html  SFPosResolution_8hh_source.html  SFPositionRes_8hh_source.html  SFPositionResolution_8hh_source.html  SFSelection_8hh_source.html  SFStabilityMon_8hh_source.html  SFTemperature_8hh_source.html  SFTimeConst_8hh_source.html  SFTimingRes_8hh_source.html  SFTimingResolution_8hh_source.html  SFTools_8hh_source.html  TFit_8hh_source.html  TimeConst_8hh_source.html  annotated.html  classAttenuation-members.html  classAttenuation.html  classBGFit-members.html  classBGFit.html  classSFAttenuation-members.html  classSFAttenuation.html  classSFData-members.html  classSFData.html  classSFDrawCommands-members.html  classSFDrawCommands.html  (+137 more)
results/: .gitignore  AnalysisReport.odp  EndTFit.odp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+8 more)
sources/: CMakeLists.txt  Doxyfile.in  LinkDef.h  attenuation.cc  data.cc  energyres.cc  lightout.cc  runseries.sh  scifi.cc  tconst.cc  tests.cc  timeres.cc
sources/include/: BGFit.hh  SFAttenuation.hh  SFData.hh  SFDrawCommands.hh  SFEnergyRes.hh  SFEnergyResolution.hh  SFFitResults.hh  SFLightOutput.hh  SFMC.hh  SFPeakFinder.hh  SFPositionRes.hh  SFStabilityMon.hh  SFTemperature.hh  SFTimeConst.hh  SFTimingRes.hh  SFTools.hh  TFit.hh  TimeConst.hh
sources/lib/: CMakeLists.txt  LinkDef.h
sources/lib/include/: SFAttenuation.hh  SFAttenuationModel.hh  SFCountMap.hh  SFData.hh  SFDrawCommands.hh  SFEnergyReco.hh  SFEnergyRes.hh  SFFitResults.hh  SFInfo.hh  SFLightOutput.hh  SFPeakFinder.hh  SFPositionReco.hh  SFPositionRecoModel.hh  SFPositionRes.hh  SFResults.hh  SFStabilityMon.hh  SFTemperature.hh  SFTimeConst.hh  SFTimingRes.hh  SFTools.hh
sources/lib/src/: SFAttenuation.cc  SFAttenuationModel.cc  SFCountMap.cc  SFData.cc  SFDrawCommands.cc  SFEnergyReco.cc  SFEnergyRes.cc  SFFitResults.cc  SFInfo.cc  SFLightOutput.cc  SFPeakFinder.cc  SFPositionReco.cc  SFPositionRecoModel.cc  SFPositionRes.cc  SFResults.cc  SFStabilityMon.cc  SFTemperature.cc  SFTimeConst.cc  SFTimingRes.cc  SFTools.cc
sources/macros/: AmpTimeConst.C  ChargeClean.C  DiffCouplings.C  ISMART.C  InternalAct.C  JPET2018.C  TimeConstDiode.C
sources/src/: BGFit.cc  SFAttenuation.cc  SFData.cc  SFDrawCommands.cc  SFEnergyRes.cc  SFEnergyResolution.cc  SFFitResults.cc  SFLightOutput.cc  SFMC.cc  SFPeakFinder.cc  SFPositionRes.cc  SFStabilityMon.cc  SFTemperature.cc  SFTimeConst.cc  SFTimingRes.cc  SFTitResults.cc  SFTools.cc  TFit.cc  TimeConst.cc
